# multi-agent-research-assistant

./: .env.example  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements-memory.txt  requirements.txt
backend/api/: memory_endpoints.py
backend/app/: main.py
backend/app/api/v1/endpoints/: research.py
backend/app/core/: config.py  llm_client.py  logging.py  metrics.py
backend/app/core/agents/: agents.py
backend/app/core/graph/: pipeline.py
backend/app/core/memory/: session.py
backend/app/core/tools/: search.py  verify.py
backend/app/schemas/: research.py
backend/db/: 003_memory_tiers.sql
backend/evaluation/: factscore.py  live_belief_graph.py  regression_tracker.py
backend/memory/: episodic.py  integration.py  retriever.py  semantic.py  working.py
backend/retrieval/: bm25.py  decomposer.py  hybrid_pipeline.py  rrf.py
backend/tests/evaluation/: test_factscore.py  test_live_belief_graph.py  test_regression_tracker.py
backend/tests/integration/: test_pipeline.py
backend/tests/memory/: conftest.py  test_episodic_memory.py  test_semantic_memory.py  test_working_memory.py
backend/tests/retrieval/: test_bm25.py  test_decomposer.py  test_hybrid_pipeline.py  test_rrf.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/app/research/: page.tsx
frontend/src/components/: MemoryPanel.tsx
frontend/src/hooks/: usePipeline.ts
frontend/src/store/: research.ts
frontend/src/types/: index.ts  research.ts
infra/docker/: postgres-init.sql
infra/nginx/: nginx.conf
infra/prometheus/: prometheus.yml
