[tool.poetry]
name = "multi-agent-research-backend"
version = "1.0.0"
description = "Production-grade Multi-Agent Research Assistant API"
authors = ["Research Team"]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
gunicorn = "^22.0.0"
anthropic = "^0.40.0"
langgraph = "^0.2.60"
langchain-anthropic = "^0.3.0"
langchain-community = "^0.3.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
redis = {extras = ["hiredis"], version = "^5.2.0"}
pgvector = "^0.3.5"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.12"
httpx = "^0.28.0"
tenacity = "^9.0.0"
prometheus-client = "^0.21.0"
opentelemetry-api = "^1.29.0"
opentelemetry-sdk = "^1.29.0"
opentelemetry-instrumentation-fastapi = "^0.50b0"
structlog = "^24.4.0"
slowapi = "^0.1.9"
celery = {extras = ["redis"], version = "^5.4.0"}
beautifulsoup4 = "^4.12.3"
arxiv = "^2.1.3"
pypdf = "^5.1.0"
sentence-transformers = "^3.3.1"
numpy = "^1.26.0"
tiktoken = "^0.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
factory-boy = "^3.3.1"
mypy = "^1.13.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
